--- a/simple_tutorial.ipynb
+++ b/simple_tutorial.ipynb
@@ -46,9 +46,9 @@
    "outputs": [],
    "source": [
     "theory_path=Path('/global/cscratch1/sd/damonge/CoLoRe_sims/sim1000')\n",
-    "bias_filename=Path('/global/u2/c/cramirez/Codes/CoLoRe/CoLoRe_LyA_v3/examples/LSST/BzBlue.txt')\n",
-    "nz_filename=Path('/global/u2/c/cramirez/Codes/CoLoRe/CoLoRe_LyA_v3/examples/LSST/NzBlue.txt')\n",
-    "pk_filename=Path('/global/u2/c/cramirez/Codes/CoLoRe/CoLoRe_LyA_v3/examples/simple/Pk_CAMB_test.dat')"
+    "bias_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/BzBlue.txt')\n",
+    "nz_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/NzBlue.txt')\n",
+    "pk_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/Pk_CAMB_test.dat')"
    ]
   },
   {
@@ -100,6 +100,59 @@
     "                            zmin=0.5, zmax=0.7, #Also results for 0.7 and 0.9\n",
     "                            nside=2)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6deabdcf-a80f-4d79-bcb4-725901741081",
+   "metadata": {},
+   "source": [
+    "available_sims.py can be used to search for configurations available for the previous cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "126b3024-dbe7-404a-ad20-93acef3cf1e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------+------+------+------+------+-----+\n",
+      "| nside |  rsd  | rmin | rmax | zmin | zmax |  N  |\n",
+      "+-------+-------+------+------+------+------+-----+\n",
+      "|   1   | True  | 0.1  | 200  | 0.7  | 0.9  | 12  |\n",
+      "|   2   | True  | 0.1  | 400  | 0.7  | 0.9  | 48  |\n",
+      "|   2   | True  | 0.1  | 200  | 0.6  | 0.9  | 144 |\n",
+      "|   2   | True  | 0.1  | 200  |  0   | 1.42 | 48  |\n",
+      "|   2   | True  | 0.1  | 200  | 0.9  | 1.1  | 480 |\n",
+      "|   2   | True  | 0.1  | 200  | 0.3  | 0.5  | 480 |\n",
+      "|   2   | True  | 0.1  | 200  | 1.1  | 1.4  | 48  |\n",
+      "|   2   | True  | 0.1  | 200  | 0.5  | 0.7  | 480 |\n",
+      "|   2   | True  | 0.1  | 200  | 0.1  | 0.3  | 48  |\n",
+      "|   2   | True  | 0.1  | 200  | 0.7  | 0.9  | 480 |\n",
+      "|   2   | True  | 0.1  | 300  | 0.7  | 0.9  | 48  |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  | 200  | 0.9  | 1.1  | 48  |\n",
+      "|   2   | False | 0.1  | 200  | 0.5  | 0.7  | 480 |\n",
+      "|   2   | False | 0.1  | 200  | 0.7  | 0.9  | 144 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "|   2   | False | 0.1  |  50  | 0.5  | 0.7  | 192 |\n",
+      "+-------+-------+------+------+------+------+-----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run available_sims.py --path /global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/binned_analysis_with_error"
    ]
   },
   {
