--- a/simple_tutorial.ipynb
+++ b/simple_tutorial.ipynb
@@ -274,10 +274,10 @@
     {
      "data": {
       "text/html": [
-       "<h2>Fit Statistics</h2><table><tr><td>fitting method</td><td>leastsq</td><td></td></tr><tr><td># function evals</td><td>7</td><td></td></tr><tr><td># data points</td><td>70</td><td></td></tr><tr><td># variables</td><td>1</td><td></td></tr><tr><td>chi-square</td><td> 60494.4983</td><td></td></tr><tr><td>reduced chi-square</td><td> 876.731859</td><td></td></tr><tr><td>Akaike info crit.</td><td> 475.326872</td><td></td></tr><tr><td>Bayesian info crit.</td><td> 477.575367</td><td></td></tr></table><h2>Variables</h2><table><tr><th> name </th><th> value </th><th> standard error </th><th> relative error </th><th> initial value </th><th> min </th><th> max </th><th> vary </th></tr><tr><td> bias </td><td>  1.31646315 </td><td>  9.0301e-04 </td><td> (0.07%) </td><td> 1.3 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr><tr><td> smooth_factor </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_rsd </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_cross </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> bias2 </td><td>  0.00000000 </td><td>  0.00000000 </td><td>  </td><td> 0 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr></table>"
+       "<h2>Fit Statistics</h2><table><tr><td>fitting method</td><td>leastsq</td><td></td></tr><tr><td># function evals</td><td>7</td><td></td></tr><tr><td># data points</td><td>70</td><td></td></tr><tr><td># variables</td><td>1</td><td></td></tr><tr><td>chi-square</td><td> 60494.4983</td><td></td></tr><tr><td>reduced chi-square</td><td> 876.731859</td><td></td></tr><tr><td>Akaike info crit.</td><td> 475.326872</td><td></td></tr><tr><td>Bayesian info crit.</td><td> 477.575367</td><td></td></tr></table><h2>Variables</h2><table><tr><th> name </th><th> value </th><th> standard error </th><th> relative error </th><th> initial value </th><th> min </th><th> max </th><th> vary </th></tr><tr><td> bias </td><td>  1.31646315 </td><td>  9.0301e-04 </td><td> (0.07%) </td><td> 1.3 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr><tr><td> smooth_factor </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_rsd </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_cross </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr></table>"
       ],
       "text/plain": [
-       "<lmfit.minimizer.MinimizerResult at 0x2aaaee6f26a0>"
+       "<lmfit.minimizer.MinimizerResult at 0x2aaaee6f5970>"
       ]
      },
      "execution_count": 10,
@@ -307,8 +307,7 @@
       "| bias                |   1.316 |    0.001 |         0.069 |          1.3 |     0 |   inf | True   |\n",
       "| smooth_factor       |   1     |    0     |         0     |          1   |     0 |   inf | False  |\n",
       "| smooth_factor_rsd   |   1     |    0     |         0     |          1   |     0 |   inf | False  |\n",
-      "| smooth_factor_cross |   1     |    0     |         0     |          1   |     0 |   inf | False  |\n",
-      "| bias2               |   0     |    0     |         0     |          0   |     0 |   inf | False  |\n"
+      "| smooth_factor_cross |   1     |    0     |         0     |          1   |     0 |   inf | False  |\n"
      ]
     }
    ],
@@ -424,7 +423,7 @@
     {
      "data": {
       "text/plain": [
-       "<read_theory_to_xi.ComputeModelsCoLoRe at 0x2aaae64bb250>"
+       "<read_theory_to_xi.ComputeModelsCoLoRe at 0x2aaae64ba700>"
       ]
      },
      "execution_count": 15,
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "3539475c-10bf-4d8d-91de-7f25c216eed0",
    "metadata": {},
    "outputs": [
@@ -531,7 +530,7 @@
        "Text(0.5, 1.0, 'Bias2 = 2')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,30 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "f059f443-6a8d-4eba-8958-6f6d64a8099e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:126: UserWarning: The default value of lowring has been changed to False, set it to True if you cannot reproduce previous results\n",
-      "  warnings.warn(\"The default value of lowring has been changed to False, \"\n",
-      "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:217: UserWarning: The default value of extrap has been changed to False, set it to True if you cannot reproduce previous results\n",
-      "  warnings.warn(\"The default value of extrap has been changed to False, \"\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "<h2>Fit Statistics</h2><table><tr><td>fitting method</td><td>leastsq</td><td></td></tr><tr><td># function evals</td><td>24</td><td></td></tr><tr><td># data points</td><td>70</td><td></td></tr><tr><td># variables</td><td>2</td><td></td></tr><tr><td>chi-square</td><td> 791.396870</td><td></td></tr><tr><td>reduced chi-square</td><td> 11.6381893</td><td></td></tr><tr><td>Akaike info crit.</td><td> 173.771303</td><td></td></tr><tr><td>Bayesian info crit.</td><td> 178.268294</td><td></td></tr></table><h2>Variables</h2><table><tr><th> name </th><th> value </th><th> initial value </th><th> min </th><th> max </th><th> vary </th></tr><tr><td> bias </td><td>  1.9197e-09 </td><td> 0.1 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr><tr><td> smooth_factor </td><td>  1.00000000 </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_rsd </td><td>  1.00000000 </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_cross </td><td>  1.00000000 </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> bias2 </td><td>  1.46687372 </td><td> 2 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr></table>"
       ],
       "text/plain": [
-       "<lmfit.minimizer.MinimizerResult at 0x2aaae64bbc40>"
+       "<lmfit.minimizer.MinimizerResult at 0x2aaaee901370>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "380b68a7-725f-4e33-a3c4-1b55d222b494",
    "metadata": {},
    "outputs": [
@@ -611,10 +600,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:126: UserWarning: The default value of lowring has been changed to False, set it to True if you cannot reproduce previous results\n",
-      "  warnings.warn(\"The default value of lowring has been changed to False, \"\n",
-      "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:217: UserWarning: The default value of extrap has been changed to False, set it to True if you cannot reproduce previous results\n",
-      "  warnings.warn(\"The default value of extrap has been changed to False, \"\n",
       "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:126: UserWarning: The default value of lowring has been changed to False, set it to True if you cannot reproduce previous results\n",
       "  warnings.warn(\"The default value of lowring has been changed to False, \"\n",
       "/global/homes/c/cramirez/.local/cori/3.8-anaconda-2020.11/lib/python3.8/site-packages/mcfit/mcfit.py:217: UserWarning: The default value of extrap has been changed to False, set it to True if you cannot reproduce previous results\n",
@@ -646,14 +631,6 @@
     "Plots.plot_data(pole=pole, boxes=boxes, ax=ax, plot_args=dict(c='C0', label='data'))\n",
     "Plots.plot_best_fit(fitter=fitter, pole=pole, ax=ax, plot_args=dict(c='k', lw=1, label='best fit'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "917e0bec-a42e-4c2c-9762-486ac3de2407",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
