--- a/README
+++ b/README
@@ -1,8 +1,15 @@
-This module is not a package, so every notebook should be placed in this same directory or imported usind os.chdir.
+This repo is now a package. In order to install it we first need to fulfill the requirements.
 
-The requirements can be installed by simply:
-pip install -r requirements.txt
+They can be installed by simply:
+```pip install -r requirements.txt```
 
+Corrfunc can give errors if installed through pip. It might be needed to install it through:
+```
+git clone https://github.com/manodeep/Corrfunc.git
+cd Corrfunc
+make install
+python -m pip install .
+```
 
 The test suite can be run through:
 python -m unittest discover CoLoRe_corrf_analysis/tests/
