--- a/Examples/tutorial_cross_unclustered_rsd_vs_clustered_norsd.ipynb
+++ b/Examples/tutorial_cross_unclustered_rsd_vs_clustered_norsd.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "bfdfe347-ea70-4762-b8e2-53960a1a0b69",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# unclusteredRSD-clusteredNORSD"
    ]
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "0b377414-2558-4c42-909e-94a0b00d9f4a",
    "metadata": {},
    "outputs": [
@@ -307,14 +309,6 @@
     "Plots.plot_data(pole=pole, boxes=sub_boxes, ax=ax, plot_args=dict(c='C0', label='data'))\n",
     "Plots.plot_best_fit(fitter=fitter, pole=pole, ax=ax, plot_args=dict(c='k', lw=1, label='best fit'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d6a7f67-b482-441b-b0b5-deab1b8f6b83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
