--- a/Examples/tutorial_cross_unclustered_rsd_vs_clustered_norsd.ipynb
+++ b/Examples/tutorial_cross_unclustered_rsd_vs_clustered_norsd.ipynb
@@ -13,6 +13,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "691b1b20-9589-4356-acc1-f5b6fd1d1b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source1=1\n",
+    "source2=4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "96652c69-37de-4acd-9393-75411be15a62",
    "metadata": {
     "tags": []
@@ -27,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ef3188e0-9fcc-4b92-b9c5-7d43911a0113",
    "metadata": {},
    "outputs": [],
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "93d247fb-105d-4df2-8314-34b91fe5d1bd",
    "metadata": {},
    "outputs": [],
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a2f90811-4e04-48f7-84d6-4c28ac82687c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "0b377414-2558-4c42-909e-94a0b00d9f4a",
    "metadata": {},
    "outputs": [
@@ -102,7 +113,7 @@
     }
    ],
    "source": [
-    "print(FileFuncs.get_available_runs('/global/cscratch1/sd/cramirez/NBodyKit/cross_correlations/multibias/s1_s4'))"
+    "print(FileFuncs.get_available_runs(f'/global/cscratch1/sd/cramirez/NBodyKit/cross_correlations/multibias/s{source1}_s{source2}'))"
    ]
   },
   {
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7f94914b-c57b-41a3-901d-b77f120bfd26",
    "metadata": {},
    "outputs": [
@@ -134,7 +145,7 @@
     }
    ],
    "source": [
-    "boxes_path=Path('/global/cscratch1/sd/cramirez/NBodyKit/cross_correlations/multibias/s1_s4/')\n",
+    "boxes_path=Path(f'/global/cscratch1/sd/cramirez/NBodyKit/cross_correlations/multibias/s{source1}_s{source2}/')\n",
     "\n",
     "zmin=0.5\n",
     "zmax=0.7\n",
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "471aec9f-e826-49f5-a3d6-98274bd4c4a3",
    "metadata": {},
    "outputs": [
@@ -168,7 +179,7 @@
        "48"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "ceb37a4d-af96-4e47-92ff-a2e7777ae541",
    "metadata": {},
    "outputs": [
@@ -203,7 +214,7 @@
        "Text(0.5, 1.0, 'Bias2 = 2')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "f14ed8ba-f6a9-415e-bb11-ac50b05dfc9d",
    "metadata": {},
    "outputs": [
@@ -253,10 +264,10 @@
        "<h2>Fit Statistics</h2><table><tr><td>fitting method</td><td>leastsq</td><td></td></tr><tr><td># function evals</td><td>16</td><td></td></tr><tr><td># data points</td><td>70</td><td></td></tr><tr><td># variables</td><td>2</td><td></td></tr><tr><td>chi-square</td><td> 1691.29431</td><td></td></tr><tr><td>reduced chi-square</td><td> 24.8719752</td><td></td></tr><tr><td>Akaike info crit.</td><td> 226.932790</td><td></td></tr><tr><td>Bayesian info crit.</td><td> 231.429780</td><td></td></tr></table><h2>Variables</h2><table><tr><th> name </th><th> value </th><th> standard error </th><th> relative error </th><th> initial value </th><th> min </th><th> max </th><th> vary </th></tr><tr><td> bias </td><td>  0.00126873 </td><td>  9.7432e-04 </td><td> (76.79%) </td><td> 0.01 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr><tr><td> smooth_factor </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_rsd </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> smooth_factor_cross </td><td>  1.00000000 </td><td>  0.00000000 </td><td> (0.00%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> False </td></tr><tr><td> bias2 </td><td>  1.12733886 </td><td>  0.00358878 </td><td> (0.32%) </td><td> 1 </td><td>  0.00000000 </td><td>         inf </td><td> True </td></tr></table><h2>Correlations (unreported correlations are < 0.100)</h2><table><tr><td>bias</td><td>bias2</td><td>-0.8543</td></tr></table>"
       ],
       "text/plain": [
-       "<lmfit.minimizer.MinimizerResult at 0x2aaae6159e50>"
+       "<lmfit.minimizer.MinimizerResult at 0x2aaaee2c0e80>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "a6de5c59-d5ca-4045-bbc8-f5e84dd6b2de",
    "metadata": {},
    "outputs": [
