--- a/Examples/sim_bs_100_/show_analysis_available.ipynb
+++ b/Examples/sim_bs_100_/show_analysis_available.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e13ea10e-2602-4b20-beaa-230b78d802b6",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "cc1245c5-2981-4322-a02a-77931e4c39c1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "922da374-8ddd-41bd-add2-1892d17f2c68",
    "metadata": {},
    "outputs": [
@@ -33,32 +33,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s1_s4_from_CoLoRe\n",
+      "s1_s5\n",
       "+-------+-----------+------+------+--------+------+------+----+\n",
       "| nside |    rsd    | rmin | rmax | N_bins | zmin | zmax | N  |\n",
       "+-------+-----------+------+------+--------+------+------+----+\n",
-      "|   2   | rsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 9  |\n",
-      "|   2   |  rsd_rsd  | 0.1  | 200  |   41   | 0.5  | 0.7  | 46 |\n",
+      "|   2   | rsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
+      "|   2   |  rsd_rsd  | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
       "+-------+-----------+------+------+--------+------+------+----+\n",
-      "s4_s5_from_CoLoRe\n",
+      "s5\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "| nside | rsd | rmin | rmax | N_bins | zmin | zmax | N |\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "s4_s5\n",
       "+-------+-------------+------+------+--------+------+------+----+\n",
       "| nside |     rsd     | rmin | rmax | N_bins | zmin | zmax | N  |\n",
       "+-------+-------------+------+------+--------+------+------+----+\n",
-      "|   2   |  rsd_norsd  | 0.1  | 200  |   41   | 0.5  | 0.7  | 47 |\n",
-      "|   2   | norsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 47 |\n",
+      "|   2   |  rsd_norsd  | 0.1  | 200  |   41   | 0.5  | 0.7  | 46 |\n",
+      "|   2   | norsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
       "|   2   |   rsd_rsd   | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
       "+-------+-------------+------+------+--------+------+------+----+\n",
+      "s4\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "| nside | rsd | rmin | rmax | N_bins | zmin | zmax | N |\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "s1_s4_from_catalog\n",
+      "+-------+-----------+------+------+--------+------+------+----+\n",
+      "| nside |    rsd    | rmin | rmax | N_bins | zmin | zmax | N  |\n",
+      "+-------+-----------+------+------+--------+------+------+----+\n",
+      "|   2   | rsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
+      "+-------+-----------+------+------+--------+------+------+----+\n",
+      "s2\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "| nside | rsd | rmin | rmax | N_bins | zmin | zmax | N |\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "s1\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "| nside | rsd | rmin | rmax | N_bins | zmin | zmax | N |\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "s3\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "| nside | rsd | rmin | rmax | N_bins | zmin | zmax | N |\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
+      "+-------+-----+------+------+--------+------+------+---+\n",
       "s1_s4\n",
       "+-------+-----------+------+------+--------+------+------+----+\n",
       "| nside |    rsd    | rmin | rmax | N_bins | zmin | zmax | N  |\n",
       "+-------+-----------+------+------+--------+------+------+----+\n",
       "|   2   | rsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
-      "+-------+-----------+------+------+--------+------+------+----+\n",
-      "s1_s5_from_CoLoRe\n",
-      "+-------+-----------+------+------+--------+------+------+----+\n",
-      "| nside |    rsd    | rmin | rmax | N_bins | zmin | zmax | N  |\n",
-      "+-------+-----------+------+------+--------+------+------+----+\n",
-      "|   2   | rsd_norsd | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
+      "|   2   |  rsd_rsd  | 0.1  | 200  |   41   | 0.5  | 0.7  | 48 |\n",
       "+-------+-----------+------+------+--------+------+------+----+\n"
      ]
     }
@@ -73,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15aa5657-2fcc-4948-8e9c-fceb5c9c5518",
+   "id": "5d2c84be-7b1c-41d8-a4f5-482638001f84",
    "metadata": {},
    "outputs": [],
    "source": []
