update notebook again

--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d28bd191-2d51-4637-b45f-ecd63cf115b9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from CoLoRe_corrf_analysis.plot_methods import Plots\n",
@@ -70,6 +75,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "64a8b613-58f2-4ac2-a5c4-140f1ac7fac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will work with the multibias 1 box. Therefore the effective biases are:\n",
+    "biases = {\n",
+    "    1 : 0,\n",
+    "    4 : 1.13,\n",
+    "    5 : 1.5,\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "71ba3977-367e-45af-889d-d325af1788c2",
    "metadata": {},
@@ -82,7 +102,7 @@
    "id": "8418a93f-2b83-4d48-8d69-f4edf0d3c2b3",
    "metadata": {},
    "source": [
-    "This will require the full model:"
+    "We use this combination as it requires all the terms in our RSD model:"
    ]
   },
   {
@@ -101,7 +121,7 @@
    "id": "1b548939-b038-4f78-b979-013a5e8f0ec5",
    "metadata": {},
    "source": [
-    "The terms in the auto correlation can be recovered each one by:\n",
+    "The terms in the cross-correlation can be recovered each one by:\n",
     "\n",
     "$<\\delta_{\\rm LN}^{\\rm b_A} \\delta_{\\rm LN}^{\\rm b_B}>$: (0) Computing the cross-correlation of the fields without RSD.\\\n",
     "$f^2 \\mu^4 <\\delta_L \\delta_L>$: (1) Auto-correlation unclustered source s1.\\\n",
@@ -115,7 +135,7 @@
    "id": "6cd2e1f6-d6f1-4dce-a935-986a26f56dff",
    "metadata": {},
    "source": [
-    "We can also get some of the terms above with the following cross/auto correlations:\n",
+    "We can also get some mixed terms by looking at these other cross-correlations:\n",
     "\n",
     "(02): s4(norsd)_s5(rsd)\\\n",
     "(03): s4(rsd)_s5(norsd)\\\n",
@@ -127,10 +147,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "567679fa-65bc-4e67-8385-dc53ca7305fb",
+   "metadata": {},
+   "source": [
+    "In this notebook we will to compute a certain mix of terms and see that it can be reproduced by summing each term (or a combination of terms) independently."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "cf6ba293-bbc5-4ac7-b6f5-9b431829de28",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_boxes(source1, source2, rsd1, rsd2, force_path=None):\n",
@@ -156,7 +189,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3eca14ec-d512-4dd3-bce5-25e9a11be1eb",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "poles = [0, 2]"
@@ -166,7 +204,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6ef08f5d-e5b4-4d24-ae7b-0e5d9e11e8c6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "data.boxes = dict()\n",
@@ -179,25 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "be86957f-fc94-4378-b070-7bf88fd7389b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biases = {\n",
-    "    1 : 0,\n",
-    "    2 : 0.25,\n",
-    "    3 : 0.5,\n",
-    "    4 : 1.13,\n",
-    "    5 : 1.5,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "2174cf52-9970-4531-9485-29e672bf5f3c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -235,7 +269,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "06c56141-54ab-4cb9-bbcb-d20412fe28a1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='1'\n",
@@ -264,7 +303,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "ed80297b-77b9-4ef8-8b00-f7edee6108c8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='2'\n",
@@ -294,7 +338,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "11871998-d210-4c17-a651-689d9697798c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='3'\n",
@@ -324,6 +373,9 @@
    "execution_count": 10,
    "id": "9a92e44b-db9c-48bf-a257-94bf23d6e297",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -354,7 +406,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "d22750ca-17c5-4599-afc1-b5acb8c6a351",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='03'\n",
@@ -383,7 +440,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "fdbf1b21-65c0-4b61-bf00-07c46b084f2d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='12'\n",
@@ -412,7 +474,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "8cae944e-d918-45d1-ae00-d8532feedee6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='13'\n",
@@ -441,7 +508,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "a745d03d-58ce-472e-8129-dcac27fab264",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "label='0123'\n",
@@ -488,7 +560,12 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "1f881966-db25-424c-8ad9-9f41c262b3f4",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_sum_from_labels(labels, poles=[0,2]):\n",
@@ -510,7 +587,12 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "19098ed2-df17-428d-a760-bb63d972f7e8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def plot_sum(ax, labels, poles=[0,2], c='C0', **kwargs):\n",
@@ -644,6 +726,18 @@
     "plot_sum(ax, ['0123'], c='C1', alpha=0.5)\n",
     "ax.set_xlim(-5, 200)\n",
     "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f885de8-f4a8-439f-af4c-9bd32c1baed2",
+   "metadata": {},
+   "source": [
+    "All the sums are consistent with the direct measurement, except for the measurement \n",
+    "of the full correlation with all the terms (0 1 2 3). \n",
+    "\n",
+    "There should be something missing in the model when dealing with biased sources\n",
+    "with RSD applied."
    ]
   }
  ],
