--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -143,7 +143,7 @@
     "(13): s1(rsd)_s4(rsd)\\\n",
     "(0123): s4(rsd)_s5(rsd)\n",
     "\n",
-    "All the other terms cannot be obtained independently: (23) (01) (0 1 2) (0 1 3) (0 2 3) (1 2 3)"
+    "All the other mixed terms cannot be obtained independently: (23) (01) (0 1 2) (0 1 3) (0 2 3) (1 2 3)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "id": "567679fa-65bc-4e67-8385-dc53ca7305fb",
    "metadata": {},
    "source": [
-    "In this notebook we will to compute a certain mix of terms and see that it can be reproduced by summing each term (or a combination of terms) independently."
+    "In this notebook we will to compute a certain mix of terms and see that they can be reproduced by summing each term (or a combination of terms) independently."
    ]
   },
   {
