notebook again and again

--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -1,69 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d28bd191-2d51-4637-b45f-ecd63cf115b9",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from CoLoRe_corrf_analysis.plot_methods import Plots\n",
-    "from CoLoRe_corrf_analysis.file_funcs import FileFuncs\n",
-    "from CoLoRe_corrf_analysis.fitter import Fitter\n",
-    "from CoLoRe_corrf_analysis.read_colore import ComputeModelsCoLoRe\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "theory_path=Path('/global/cscratch1/sd/damonge/CoLoRe_sims/sim1000')\n",
-    "bias_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/BzBlue.txt')\n",
-    "nz_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/NzBlue.txt')\n",
-    "pk_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/Pk_CAMB_test.dat')\n",
-    "\n",
-    "theory = ComputeModelsCoLoRe(\n",
-    "    box_path=theory_path,\n",
-    "    source=2,\n",
-    "    nz_filename=nz_filename,\n",
-    "    pk_filename=pk_filename,\n",
-    "    param_cfg_filename='/global/cscratch1/sd/damonge/CoLoRe_sims/sim1000/out_params.cfg',\n",
-    "    bias_filename=bias_filename,\n",
-    "    apply_lognormal=True)\n",
-    "\n",
-    "zmin=0.5\n",
-    "zmax=0.7\n",
-    "z = theory.get_zeff(zmin=zmin, zmax=zmax) #the usual redshift range\n",
-    "\n",
-    "\n",
-    "class Results:\n",
-    "    def __init__(self, label):\n",
-    "        self.label = label\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return self.label\n",
-    "    \n",
-    "    def get_cf_from_boxes(self, sub_boxes):\n",
-    "        xis = np.array([np.asarray(box.halotools_like_cf).sum(axis=1) for box in sub_boxes])\n",
-    "        return xis.mean(axis=0)#, xis.std(ddof=1, axis=0)/np.sqrt(len(sub_boxes))   \n",
-    "    \n",
-    "def get_npole_legendre(order, npole):\n",
-    "    from scipy.special import legendre\n",
-    "    from scipy.integrate import quad\n",
-    "\n",
-    "    L = legendre(order)\n",
-    "    return (2*npole+1)/2 * quad(L, -1, 1)[0]\n",
-    "        \n",
-    "    \n",
-    "model = Results('model')\n",
-    "data = Results('data')\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2830b648-be2c-4937-a451-cbaed04887ad",
    "metadata": {
@@ -152,6 +89,74 @@
    "metadata": {},
    "source": [
     "In this notebook we will to compute a certain mix of terms and see that they can be reproduced by summing each term (or a combination of terms) independently."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95310b51-11f0-41a9-b452-5b81ed582ec4",
+   "metadata": {},
+   "source": [
+    "## ¡¡Scroll all the way down to see results!!:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a554cc63-925d-45fd-8ed9-258ca781f00d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from CoLoRe_corrf_analysis.plot_methods import Plots\n",
+    "from CoLoRe_corrf_analysis.file_funcs import FileFuncs\n",
+    "from CoLoRe_corrf_analysis.fitter import Fitter\n",
+    "from CoLoRe_corrf_analysis.read_colore import ComputeModelsCoLoRe\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "theory_path=Path('/global/cscratch1/sd/damonge/CoLoRe_sims/sim1000')\n",
+    "bias_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/BzBlue.txt')\n",
+    "nz_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/NzBlue.txt')\n",
+    "pk_filename=Path('/global/cscratch1/sd/cramirez/NBodyKit/hanyu_david_box/input_files/Pk_CAMB_test.dat')\n",
+    "\n",
+    "theory = ComputeModelsCoLoRe(\n",
+    "    box_path=theory_path,\n",
+    "    source=2,\n",
+    "    nz_filename=nz_filename,\n",
+    "    pk_filename=pk_filename,\n",
+    "    param_cfg_filename='/global/cscratch1/sd/damonge/CoLoRe_sims/sim1000/out_params.cfg',\n",
+    "    bias_filename=bias_filename,\n",
+    "    apply_lognormal=True)\n",
+    "\n",
+    "zmin=0.5\n",
+    "zmax=0.7\n",
+    "z = theory.get_zeff(zmin=zmin, zmax=zmax) #the usual redshift range\n",
+    "\n",
+    "\n",
+    "class Results:\n",
+    "    def __init__(self, label):\n",
+    "        self.label = label\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.label\n",
+    "    \n",
+    "    def get_cf_from_boxes(self, sub_boxes):\n",
+    "        xis = np.array([np.asarray(box.halotools_like_cf).sum(axis=1) for box in sub_boxes])\n",
+    "        return xis.mean(axis=0)#, xis.std(ddof=1, axis=0)/np.sqrt(len(sub_boxes))   \n",
+    "    \n",
+    "def get_npole_legendre(order, npole):\n",
+    "    from scipy.special import legendre\n",
+    "    from scipy.integrate import quad\n",
+    "\n",
+    "    L = legendre(order)\n",
+    "    return (2*npole+1)/2 * quad(L, -1, 1)[0]\n",
+    "        \n",
+    "    \n",
+    "model = Results('model')\n",
+    "data = Results('data')\n"
    ]
   },
   {
@@ -509,9 +514,6 @@
    "execution_count": 14,
    "id": "a745d03d-58ce-472e-8129-dcac27fab264",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -541,7 +543,10 @@
   {
    "cell_type": "markdown",
    "id": "80ccc838-a05c-4453-94ae-8ef682762d17",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Plots"
    ]
