--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -60,11 +60,11 @@
    "source": [
     "The terms in the cross-correlation can be recovered each one by:\n",
     "\n",
-    "$<\\delta_{\\rm LN}^{\\rm b_A} \\delta_{\\rm LN}^{\\rm b_B}>$: (0) Computing the cross-correlation of the fields without RSD.\\\n",
+    "$<\\delta_{\\rm LN}^{\\rm b_A} \\delta_{\\rm LN}^{\\rm b_B}>$: (0) Computing the cross-correlation of the fields without RSD.\n",
     "\n",
-    "$f^2 \\mu^4 <\\delta_L \\delta_L>$: (1) Auto-correlation unclustered source s1.\\\n",
+    "$f^2 \\mu^4 <\\delta_L \\delta_L>$: (1) Auto-correlation unclustered source s1.\n",
     "\n",
-    "$f \\mu^2 <\\delta_{\\rm LN }^{\\rm b_A} \\delta_L>$: (2) Cross-correlation s1-s4(norsd).\\\n",
+    "$f \\mu^2 <\\delta_{\\rm LN }^{\\rm b_A} \\delta_L>$: (2) Cross-correlation s1-s4(norsd).\n",
     "\n",
     "$f \\mu^2 <\\delta_{\\rm LN }^{\\rm b_B} \\delta_L>$: (3) Cross-correlation s1-s5(norsd).\n",
     "\n"
@@ -77,13 +77,13 @@
    "source": [
     "We can also get some mixed terms by looking at these other cross-correlations:\n",
     "\n",
-    "(02): s4(norsd)_s5(rsd)\\\n",
+    "(02): s4(norsd)_s5(rsd)\n",
     "\n",
-    "(03): s4(rsd)_s5(norsd)\\\n",
+    "(03): s4(rsd)_s5(norsd)\n",
     "\n",
-    "(12): s1(rsd)_s4(norsd)\\\n",
+    "(12): s1(rsd)_s4(norsd)\n",
     "\n",
-    "(13): s1(rsd)_s4(rsd)\\\n",
+    "(13): s1(rsd)_s4(rsd)\n",
     "\n",
     "(0123): s4(rsd)_s5(rsd)\n",
     "\n",
@@ -95,7 +95,8 @@
    "id": "567679fa-65bc-4e67-8385-dc53ca7305fb",
    "metadata": {},
    "source": [
-    "In this notebook we will to compute a certain mix of terms and see that they can be reproduced by summing each term (or a combination of terms) independently."
+    "In this notebook we will compute a certain mix of terms and see that they can be reproduced by summing each term (or a combination of terms) independently. \n",
+    "(E.g: The full cross-correlation (0123) should be the sum of the correlations (0)+(12)+(3)"
    ]
   },
   {
