--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "64a8b613-58f2-4ac2-a5c4-140f1ac7fac0",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
     "\n",
     "(03): s4(rsd)_s5(norsd)\n",
     "\n",
-    "(12): s1(rsd)_s4(norsd)\n",
+    "(12): s1(rsd)_s4(rsd)\n",
     "\n",
     "(13): s1(rsd)_s4(rsd)\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a554cc63-925d-45fd-8ed9-258ca781f00d",
    "metadata": {
     "tags": []
@@ -169,12 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cf6ba293-bbc5-4ac7-b6f5-9b431829de28",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -200,12 +197,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3eca14ec-d512-4dd3-bce5-25e9a11be1eb",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -215,12 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ef08f5d-e5b4-4d24-ae7b-0e5d9e11e8c6",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -235,14 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2174cf52-9970-4531-9485-29e672bf5f3c",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -261,11 +247,11 @@
     "label='0'\n",
     "source1=4\n",
     "rsd1=False\n",
-    "bias1=1.13\n",
+    "bias1=biases[source1]\n",
     "\n",
     "source2=5\n",
     "rsd2=False\n",
-    "bias2=1.5\n",
+    "bias2=biases[source2]\n",
     "\n",
     "data.boxes[label] = get_boxes(source1=source1, source2=source2, rsd1=rsd1, rsd2=rsd2)\n",
     "model.biases[label] = (bias1, bias2)\n",
@@ -280,12 +266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "06c56141-54ab-4cb9-bbcb-d20412fe28a1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -314,12 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ed80297b-77b9-4ef8-8b00-f7edee6108c8",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -349,12 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "11871998-d210-4c17-a651-689d9697798c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -383,12 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9a92e44b-db9c-48bf-a257-94bf23d6e297",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -417,12 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d22750ca-17c5-4599-afc1-b5acb8c6a351",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -451,12 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fdbf1b21-65c0-4b61-bf00-07c46b084f2d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -485,12 +453,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8cae944e-d918-45d1-ae00-d8532feedee6",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -519,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a745d03d-58ce-472e-8129-dcac27fab264",
    "metadata": {
     "tags": []
@@ -552,7 +517,6 @@
    "cell_type": "markdown",
    "id": "80ccc838-a05c-4453-94ae-8ef682762d17",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -561,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ed6a7e82-9d61-41da-8892-a1cc589cfee5",
    "metadata": {},
    "outputs": [],
@@ -571,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1f881966-db25-424c-8ad9-9f41c262b3f4",
    "metadata": {
     "jupyter": {
@@ -598,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "19098ed2-df17-428d-a760-bb63d972f7e8",
    "metadata": {
     "jupyter": {
@@ -621,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "ea16e3f7-7f74-4804-ace8-8806bec91a02",
    "metadata": {},
    "outputs": [],
@@ -631,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2365e0a0-ac87-48e4-a73b-4fdb147d2a3c",
    "metadata": {},
    "outputs": [
@@ -659,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "a67ec51a-6f83-410d-ab18-87ca451da9ac",
    "metadata": {},
    "outputs": [
@@ -687,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "19f5177a-57ac-451f-81c4-cc83bc27b8d5",
    "metadata": {},
    "outputs": [
@@ -715,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4edd60ee-e7a1-430e-b9a8-9985a2681f5d",
    "metadata": {},
    "outputs": [
