--- a/Examples/sim_bs_100_/sum_correlations.ipynb
+++ b/Examples/sim_bs_100_/sum_correlations.ipynb
@@ -560,9 +560,6 @@
    "execution_count": 16,
    "id": "1f881966-db25-424c-8ad9-9f41c262b3f4",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -587,9 +584,6 @@
    "execution_count": 17,
    "id": "19098ed2-df17-428d-a760-bb63d972f7e8",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -658,7 +652,7 @@
    "id": "01a950f0-bb4d-45a0-a037-286d5f264efd",
    "metadata": {},
    "source": [
-    "The combination (12) is more more intersting as it requries mixing two terms both for the monopole and the quadrupole.\n",
+    "The combination (12) is more intersting as it requries mixing two terms both for the monopole and the quadrupole.\n",
     "\n",
     "It might be possible that we start to see the prediction and the model depart at low scales:"
    ]
@@ -696,7 +690,7 @@
    "id": "c059cffb-2a21-4160-b0f7-db31320af263",
    "metadata": {},
    "source": [
-    "Exactly the same effect happens when mixing (12). In this case, the bias acting is the one from s5, so the effect should be larger.\n",
+    "Exactly the same effect happens when mixing (13). In this case, the bias acting is the one from s5, so the effect should be larger.\n",
     "I think this effect can be observed."
    ]
   },
@@ -807,6 +801,14 @@
     "\n",
     "$$ ( 1 + \\delta_{\\rm LN}^s) = \\frac{1 + \\delta_{LN}}{1 + \\frac{\\partial_Z v_z}{H}} \\simeq 1 + \\delta_{\\rm LN} - \\frac{\\partial_z v_z}{H}$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a63b78d-19af-4d32-8f18-0cbfdbd481d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
