--- a/Examples/Notebooks/run_CoLoRe_and_corrfunc.ipynb
+++ b/Examples/Notebooks/run_CoLoRe_and_corrfunc.ipynb
@@ -280,12 +280,19 @@
     "# which runs are finished\n",
     "\n",
     "nproc_colore = 4 # This should be keep to a small value to avoid running out of memory\n",
-    "pool = Pool(nproc_colore)\n",
-    "for out in pool.imap(\n",
-    "    compute_colore,\n",
-    "    [seed for seed in range(5)]\n",
-    "):\n",
-    "    print(out)\n"
+    "# pool = Pool(nproc_colore)\n",
+    "# for out in pool.imap(\n",
+    "#     compute_colore,\n",
+    "#     [seed for seed in range(5)]\n",
+    "# ):\n",
+    "#     print(out)\n",
+    "\n",
+    "with Pool(nproc_colore) as pool:\n",
+    "    for result in [pool.apply_async(\n",
+    "        compute_colore,\n",
+    "        args=(seed,)\n",
+    "    ) for seed in range(5)]:\n",
+    "        print(result.get())"
    ]
   },
   {
@@ -427,12 +434,19 @@
     "# which runs are finished\n",
     "\n",
     "nproc_corrf = 5 # Not sure about the best value here.\n",
-    "pool = Pool(nproc_colore)\n",
-    "for out in pool.imap(\n",
-    "    compute_corrf,\n",
-    "    [seed for seed in range(5)]\n",
-    "):\n",
-    "    print(out)\n"
+    "# pool = Pool(nproc_colore)\n",
+    "# for out in pool.imap(\n",
+    "#     compute_corrf,\n",
+    "#     [seed for seed in range(5)]\n",
+    "# ):\n",
+    "#     print(out)\n",
+    "\n",
+    "with Pool(nproc_corrf) as pool:\n",
+    "    for result in [pool.apply_async(\n",
+    "        compute_corrf,\n",
+    "        args=(seed,)\n",
+    "    ) for seed in range(5)]:\n",
+    "        print(result.get()) "
    ]
   }
  ],
